--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -24,7 +24,6 @@
         &__text {
             color: $white;
             font-family: Montserrat Regular;
-            // font-size: 1.5rem;
             @include adaptiv-font(1.5, 1.2);
             font-weight: 400;
             line-height: 140%;
@@ -39,7 +38,6 @@
     &__logo {
         color: $white;
         font-family: Montserrat Regular;
-        // font-size: 3.34rem;
         @include adaptiv-font(3.4, 2.4);
         font-weight: 400;
         line-height: 140%;
@@ -47,7 +45,6 @@
     &__title {
         color: $white;
         font-family: Montserrat Medium;
-        // font-size: 2rem;
         @include adaptiv-font(2, 1.6);
         font-weight: 500;
         line-height: 140%;
@@ -56,15 +53,13 @@
     &__link {
         color: $white;
         font-family: Montserrat Regular;
-        // font-size: 1.5rem;
         @include adaptiv-font(1.5, 1.2);
         font-weight: 400;
         line-height: 140%;
     }
     &__policy {
         color: $white;
-        font-family: Montserra Regular;
-        // font-size: 1.17rem;
+        font-family: Montserrat Regular;
         @include adaptiv-font(1.17, 1);
         font-weight: 400;
         line-height: 140%;
@@ -72,7 +67,6 @@
     &-rights {
         color: $white;
         font-family: Montserrat Regular;
-        // font-size: 1.17rem;
         @include adaptiv-font(1.17, 1);
         font-weight: 400;
         line-height: 140%;
@@ -81,7 +75,6 @@
         color: $white;
         text-align: right;
         font-family: Montserrat Regular;
-        // font-size: 1.5rem;
         @include adaptiv-font(1.5, 1.2);
         font-weight: 400;
         line-height: 140%;
@@ -89,7 +82,6 @@
     &-call {
         color: $white;
         font-family: Montserrat Medium;
-        // font-size: 1.17rem;
         @include adaptiv-font(1.17, 1);
         font-weight: 500;
         line-height: 1.42rem;
@@ -107,7 +99,6 @@
     &__num {
         color: $white;
         font-family: Montserrat Medium;
-        // font-size: 2rem;
         @include adaptiv-font(2, 1.4);
         font-weight: 500;
         line-height: 140%;
@@ -135,54 +126,12 @@
     row-gap: 1rem;
 }
 
-.accordion-menu li:last-child .dropdownlink {
-    border-bottom: 0;
-}
-.dropdownlink {
-    cursor: pointer;
-    display: block;
-    padding: 15px 15px 15px 45px;
-    font-size: 18px;
-    border-bottom: 1px solid #ccc;
-    color: #212121;
-    position: relative;
-    transition: all 0.4s ease-out;
-    i {
-        position: absolute;
-        top: 17px;
-        left: 16px;
-    }
-    .fa-chevron-down {
-        right: 12px;
-        left: auto;
-    }
-}
-
-.submenuItems {
-    display: none;
-    background: #c8e6c9;
-    li {
-        border-bottom: 1px solid #b6b6b6;
-    }
-}
-
-.submenuItems a {
-    display: block;
-    color: #727272;
-    padding: 12px 12px 12px 45px;
-    transition: all 0.4s ease-out;
-    &:hover {
-        background-color: #cddc39;
-        color: #fff;
-        transform: scale(1.1);
-    }
-}
 
 .footer-text::after {
     @media (max-width: 767px) {
         content: "+";
         display: inline-block;
-        margin-left: 5px;
+        margin-left: 0.5rem;
         transition: transform 0.3s ease;
         position: absolute;
         right: 10%;
