--- a/sass/blocks/_main.scss
+++ b/sass/blocks/_main.scss
@@ -575,7 +575,7 @@
     margin-right: auto;
     &__name {
         color: $black;
-        font-family: Montserrat Meduim;
+        font-family: Montserrat Medium;
         @include adaptiv-font(2, 1.6);
         font-weight: 500;
         line-height: 140%;
